--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
   id 'maven-publish'
   id 'com.jfrog.bintray' version '1.7.1'
   id 'checkstyle'
+  id 'me.champeau.gradle.jmh' version '0.3.1'
 }
 
 scmVersion {
@@ -39,9 +40,29 @@ repositories {
 
 dependencies {
   testCompile 'junit:junit:+'
-  testCompile 'com.github.ben-manes.caffeine:caffeine:+'
-  testCompile 'org.cache2k:cache2k-api:+'
-  testCompile 'org.cache2k:cache2k-core:+'
+
+  jmh 'com.github.ben-manes.caffeine:caffeine:+'
+  jmh 'org.cache2k:cache2k-api:+'
+  jmh 'org.cache2k:cache2k-core:+'
+}
+
+jmh {
+  jmhVersion = '1.15'
+
+  if (project.hasProperty('benchmarkRegex')) {
+    include = project.benchmarkRegex
+  } else {
+    tasks.jmh.doFirst { throw new GradleException("jmh: includePattern expected") }
+  }
+
+  // Charts: http://nilskp.github.io/jmh-charts
+  resultFormat = 'json'
+  resultsFile = file("${buildDir}/reports/jmh/results.json")
+
+  jvmArgs = '-server'
+  failOnError = true
+  forceGC = true
+  fork = 1
 }
 
 test {
@@ -83,9 +104,7 @@ artifacts {
 bintray {
   user = "$System.env.BINTRAY_USER"
   key = "$System.env.BINTRAY_API_KEY"
-
   publications = ['mavenJava']
-
   pkg {
     repo = 'libs'
     name = project.name
