--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ cache:
 install: /bin/true
 
 script: if [ ! -z "$TRAVIS_TAG" ] || [[ "$COMMIT_MSG" != 'Release collision'* ]] ; then ./gradlew check -x test && ./gradlew test -i; fi
-
+# -PexcludeTests=com/fabahaba/collision/cache/LogCounterTest.class
 # after_success: if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ ! -z "$TRAVIS_TAG" ] ; then ./gradlew bintrayUpload; fi
