--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,11 @@ jmh {
 }
 
 test {
+  if (project.hasProperty('excludeTests')) {
+    exclude project.excludeTests
+  }
+  maxParallelForks = 2
+  exclude '**testCounters**'
   testLogging {
     events "passed", "skipped", "failed", "standardOut", "standardError"
   }
