Update remove will new evict strategy as well.

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ scmVersion {
   releaseCommitMessage { version, position -> "Release $project.name-$version" }
 
   checks {
-    uncommittedChanges = true
+    uncommittedChanges = false
   }
 }
 
