--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Oct 03 14:57:45 PDT 2016
+#Mon Feb 06 17:24:24 EST 2017
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-rc-2-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.2-rc-1-all.zip
+zipStoreBase=GRADLE_USER_HOME
