--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,8 @@ notifications:
     on_success: never
     on_failure: always
 
-branches:
-  only:
-    - master
-    - /^collision-.*$/
-
 before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
@@ -25,6 +20,6 @@ cache:
 
 install: ./gradlew -version
 
-script: if [ ! -z "$TRAVIS_TAG" ] || [[ "$COMMIT_MSG" != 'Release collision'* ]] ; then ./gradlew check -x test && ./gradlew test -i; fi
+script: ./gradlew check
 
-after_success: if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ ! -z "$TRAVIS_TAG" ] ; then ./gradlew bintrayUpload; fi
+after_success: if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ ! -z "$TRAVIS_TAG" ] ; then ./gradlew bintrayUpload; else ./gradlew jacocoTestReport; bash <(curl -s https://codecov.io/bash); fi
