--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,10 @@
 buildscript {
-    apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/plugins.gradle'
     apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/java/plugins.gradle'
-    repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
+    apply from: 'https://raw.githubusercontent.com/comodal/gradle-conf/master/plugins.gradle'
     dependencies {
-        classpath "pl.allegro.tech.build:axion-release-plugin:$axion"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray"
-        classpath "me.champeau.gradle:jmh-gradle-plugin:$jmh"
+        classpath "$axion"
+        classpath "$bintray"
+        classpath "$jmh"
     }
 }
 
@@ -37,16 +34,6 @@ dependencies {
     jmh 'org.cache2k:cache2k-core:+'
 }
 
-test {
-    if (project.hasProperty('excludeTests')) {
-        exclude project.excludeTests
-    }
-    maxParallelForks = 2
-    testLogging {
-        events "passed", "skipped", "failed", "standardOut", "standardError"
-    }
-}
-
 sourceSets {
     main {
         java {
@@ -56,9 +43,6 @@ sourceSets {
     test {
         java {
             srcDir 'src/unit/java'
-        }
-        resources {
-            srcDir 'src/unit/resources'
         }
     }
 }
