--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Mon Feb 06 17:24:24 EST 2017
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-rc-2-bin.zip
+#Thu Mar 16 14:01:07 EDT 2017
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4.1-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
