--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: java
 jdk: oraclejdk9
 
 env:
-  - JAVA_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED"
+  - JAVA_OPTS='--permit-illegal-access'
 
 notifications:
   email:
