--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,1 @@
-# org.gradle.jvmargs=--add-opens=java.base/java.lang=ALL-UNNAMED \
-#  --add-opens=java.base/java.util=ALL-UNNAMED
+org.gradle.jvmargs=-XX:+IgnoreUnrecognizedVMOptions --permit-illegal-access
