--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 sourceSets {
     main {
         java {
-            srcDir 'src/systems.comodal.collision/java'
+            srcDir 'src/systems.comodal.collision'
         }
     }
     test {
